# qt5-calculator

./: README.md  calculator_ui.py  main.py  pyproject.toml
